--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
       <div id="you">
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrkJG4xiX2qZMBHlF9zsxLupZhTUyzAJPEj6EYH2xXPwG604_rVg" alt="YOU"><br>
        <p>YOU</p>
-       <button type="button" name="roll"class="roll">Roll Dice</button>
-       <button type="button" name="button" class="hold">Hold</button>
+
       </div>
       <div id="computer">
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqdiz4gERbWU1o1PzHrn29x6EckDamrkHJusIzZFveYpU0Mtqc" alt="COMPUTER"><br>
        <p>COMPUTER</p>
       </div>
-      <div class="jumbotron">
-
-      </div>
-
+    </div>
+    <div class="panel">
+      <p>Outcome</p>
+      <p class="outcome"></p>
+      <p>Result</p>
+      <p class="result"> </p>
+      <button type="button" name="roll"class="roll">Roll Dice</button>
+      <button type="button" name="button" class="hold">Hold</button>
     </div>
 
     <script
