--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       <div class ="player">
       <div id="you">
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrkJG4xiX2qZMBHlF9zsxLupZhTUyzAJPEj6EYH2xXPwG604_rVg" alt="YOU"><br>
-       <p>YOU</p>
+       <p>Player1</p>
 
       </div>
       <div id="computer">
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqdiz4gERbWU1o1PzHrn29x6EckDamrkHJusIzZFveYpU0Mtqc" alt="COMPUTER"><br>
-       <p>COMPUTER</p>
+       <p>Player2</p>
       </div>
     </div>
     <div class="panel">
-      <p>Outcome</p>
+      <p >Outcome</p>
       <p class="outcome"></p>
       <p>Result</p>
       <p class="result"> </p>
