--- a/index.html
+++ b/index.html
@@ -28,14 +28,29 @@
        <p>Player2</p>
       </div>
     </div>
-    <div class="panel">
-      <p >Outcome</p>
-      <p class="outcome"></p>
-      <p>Result</p>
-      <p class="result"> </p>
-      <button type="button" name="roll"class="roll">Roll Dice</button>
-      <button type="button" name="button" class="hold">Hold</button>
+    <div class="row">
+      <div class = "col-md-4">
+          <p >Outcome</p>
+          <p class="outcome"></p>
+          <p>Result</p>
+          <p class="result"> </p>
+          <button type="button" name="roll"class="roll">Roll Dice</button>
+
+      </div>
     </div>
+    <button type="button" name="button" class="hold">Hold</button>
+    <div class="row">
+      <div class="col-md-6">
+        <p >Outcome</p>
+        <p class="outC"></p>
+        <p>Result</p>
+        <p class="results"> </p>
+        <button type="button" name="roll"class="roll">Roll Dice</button>
+
+      </div>
+
+    </div>
+
 
     <script
    src="https://code.jquery.com/jquery-3.3.1.js"
