--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
       <button type="button" name="button" class="hold">Hold</button>
     </div>
     </div>
+    <div class="row">
+      <div class = "col-md-8">
+      <p >Outcome</p>
+      <p class="outcome"></p>
+      <p>Result</p>
+      <p class="result"> </p>
+      <button type="button" name="roll"class="roll">Roll Dice</button>
+      <button type="button" name="button" class="hold">Hold</button>
+    </div>
+    </div>
 
     <script
    src="https://code.jquery.com/jquery-3.3.1.js"
