--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
     <title></title>
   </head>
   <body>
@@ -39,7 +39,7 @@
     </div>
     </div>
     <div class="row">
-      <div class = "col-md-8">
+      <div class = "col-md-5">
       <p >Outcome</p>
       <p class="outcome"></p>
       <p>Result</p>
