Add the playb button

--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
       <div class="jumbotron">
         <p><em>Welcome to the game!!<br>Pick a level</em></p>
         <div class="button">
-          <button type="button"class="easy" name="Easy"><em>Easy</em></button>
-          <button type="button" class="hard" name="button"><em>Hard</em></button>
-        </div>
+          <button type="button"class="play" name="play"><em>Play</em></button>
+
       </div>
       <div class ="player">
       <div id="you">
