--- a/index.html
+++ b/index.html
@@ -13,40 +13,49 @@
       <div class="jumbotron">
         <p><em>Welcome to the game!!<br>Pick a level</em></p>
         <div class="button">
-          <button type="button"class="play" name="play"><em>Play</em></button>
+          <button type="button" class="play" name="play"><em>PlAY</em></button>
 
       </div>
+    </div>
       <div class ="player">
       <div id="you">
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRrkJG4xiX2qZMBHlF9zsxLupZhTUyzAJPEj6EYH2xXPwG604_rVg" alt="YOU"><br>
+       <br>
        <p>Player1</p>
+       <br>
+       <div class="row">
+         <div class = "col-md-4">
+         <p >Outcome</p>
+         <p class="outcome"></p>
+         <p>Result</p>
+         <p class="result"> </p>
+         <button type="button" name="roll"class="roll">Roll Dice</button>
+         <button type="button" name="button" class="hold">Hold</button>
+       </div>
+       </div>
+
 
       </div>
       <div id="computer">
        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqdiz4gERbWU1o1PzHrn29x6EckDamrkHJusIzZFveYpU0Mtqc" alt="COMPUTER"><br>
        <p>Player2</p>
+       <br>
+       <div class="row">
+         <div class = "col-md-5">
+         <p >Outcome</p>
+         <p class="outcomes"></p>
+         <p>Result</p>
+         <p class="results"> </p>
+         <button type="button" name="roll"class="oll">Roll Dice</button>
+         <button type="button" name="button" class="old">Hold</button>
+       </div>
+       </div>
+
       </div>
     </div>
-    <div class="row">
-      <div class = "col-md-4">
-      <p >Outcome</p>
-      <p class="outcome"></p>
-      <p>Result</p>
-      <p class="result"> </p>
-      <button type="button" name="roll"class="roll">Roll Dice</button>
-      <button type="button" name="button" class="hold">Hold</button>
-    </div>
-    </div>
-    <div class="row">
-      <div class = "col-md-5">
-      <p >Outcome</p>
-      <p class="outcome"></p>
-      <p>Result</p>
-      <p class="result"> </p>
-      <button type="button" name="roll"class="roll">Roll Dice</button>
-      <button type="button" name="button" class="hold">Hold</button>
-    </div>
-    </div>
+  </div>
+
+
 
     <script
    src="https://code.jquery.com/jquery-3.3.1.js"
